--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-darkGray footer">
+            <footer class="bg-darkGray footer">
                 <div class="row">
                     <div class="col-md-3 col-lg-offset-1">
                         <h4>Du findest uns auch auf:</h4>
@@ -52,3 +52,21 @@
                     </div>
                 </div>
             </footer>
+        </div>
+
+    <script src="js/jquery.js"></script>
+
+    <script src="js/knockout.js"></script>
+
+    <script src="js/bootstrap.js"></script>
+
+
+    <script>
+        $(document).ready(function()
+        {
+            $(".full-height").height($(window).height()-100);
+        })
+    </script>
+    
+    </body>
+</html>
