--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,11 +54,11 @@
             </footer>
         </div>
 
-    <script src="js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
 
-    <script src="js/knockout.js"></script>
+    <script src="/js/knockout.js"></script>
 
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js"></script>
 
 
     <script>
