--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
         
         <title>hndotnet - Home Page</title>
     
-        <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/font-awesome.min.css" rel="stylesheet" />
+        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="/css/font-awesome.min.css" rel="stylesheet" />
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
