--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="./hndotnet - Home Page_files/hndotnet - Home Page.html">.Net Usergroup Heilbronn</a>
+                    <a class="navbar-brand" href="/">.Net Usergroup Heilbronn</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     
