--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -1,5 +1,13 @@
 {% include header.html %}
 
-   {{ content }}
+
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            {{ content }}
+        </div>
+    </div>
+
+
+   
 
 {% include footer.html %}
