--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,4 +22,4 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid body-content">
+        <div class="container-fluid body-content" style="margin-top: 70px;">
