--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -3,6 +3,16 @@
 
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
+            <h1>{{page.title}}</h1>
+            <label>Sprecher: </label> {{page.speeker}}
+            <label>Datum: </label> {{page.date}}
+            <label>Ort: </label> {{page.place}}
+            <label>Anschrift: </label> {{page.Street}}, {{page.City}}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
             {{ content }}
         </div>
     </div>
