--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -10,7 +10,15 @@
             <label>Anschrift: </label> {{page.Street}}, {{page.City}}
         </div>
     </div>
-
+    <br /><br />
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h4>Für diese Veranstalltung reservieren:</h4>
+            <a href="{{page.Xing}}">Bei Xing</a> <br />
+            <a href="{{page.Meetup}}">Bei MeetUp</a>
+        </div>
+    </div>
+    <br /><br />
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             {{ content }}
