--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,18 +4,8 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h1>{{page.title}}</h1>
-            <label>Sprecher: </label> {{page.speeker}}
-            <label>Datum: </label> {{page.date}}
-            <label>Ort: </label> {{page.place}}
-            <label>Anschrift: </label> {{page.Street}}, {{page.City}}
-        </div>
-    </div>
-    <br /><br />
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <h4>Für diese Veranstalltung reservieren:</h4>
-            <a href="{{page.Xing}}">Bei Xing</a> <br />
-            <a href="{{page.Meetup}}">Bei MeetUp</a>
+            <label>Autor: </label> {{page.author}}
+            <label>erstellt am: </label> {{page.date}}
         </div>
     </div>
     <br /><br />
