--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="row" style="border-top:solid 1px #121212; background-color:#272727; padding: 15px 0px 15px 0px;">
                     <div class="col-md-10 col-md-offset-1">
-                        © 2015 dotNet Usergroup Heilbronn | Design und Realisierung von Jonathan Günz
+                        © 2015 dotNet Usergroup Heilbronn
                     </div>
                 </div>
             </footer>
